# virust

./: Cargo.toml  README.md  RELEASE-v0.5.0-READY.md  install.sh  llm.txt  test-results.md  test_axum_path  test_tuple_syntax
crates/virust-build/: Cargo.toml
crates/virust-build/benches/: benchmark.rs
crates/virust-build/src/: builder.rs  discovery.rs  error.rs  lib.rs
crates/virust-build/tests/: builder_test.rs  discovery_test.rs
crates/virust-bun/: Cargo.toml  build.rs
crates/virust-bun/bundled/: README.md  package.json  renderer.js
crates/virust-bun/src/: component.rs  lib.rs  renderer.rs
crates/virust-bun/tests/: integration_test.rs
crates/virust-cli/: Cargo.toml
crates/virust-cli/src/: build.rs  dev.rs  dev_orchestrator.rs  init.rs  main.rs
crates/virust-cli/src/templates/chat/web/: index.html  styles.css
crates/virust-cli/src/templates/todo/web/: index.html  styles.css
crates/virust-cli/templates/: vite.config.ts
crates/virust-cli/templates/basic/: .gitignore  Cargo.toml.template  README.md.template
crates/virust-cli/templates/basic/src/: main.rs
crates/virust-cli/templates/basic/src/api/hello/: route.rs
crates/virust-cli/templates/chat/api/: route.rs
crates/virust-cli/templates/chat/web/: index.html  main.js  styles.css
crates/virust-cli/templates/fullstack/: .gitignore  Cargo.toml.template  README.md.template
crates/virust-cli/templates/fullstack/src/: main.rs
crates/virust-cli/templates/fullstack/src/api/: mod.rs
crates/virust-cli/templates/fullstack/src/api/api/todos/: route.rs
crates/virust-cli/templates/fullstack/src/api/blog/: route.rs
crates/virust-cli/templates/fullstack/src/api/blog/[slug]/: route.rs
crates/virust-cli/templates/fullstack/src/api/dashboard/stats/: route.rs
crates/virust-cli/templates/fullstack/src/api/home/: route.rs
crates/virust-cli/templates/fullstack/web/: app.tsx  types.ts
crates/virust-cli/templates/ssr-blog/: Cargo.toml.template  README.md.template  package.json  tsconfig.json
crates/virust-cli/templates/ssr-blog/src/: lib.rs  main.rs
crates/virust-cli/templates/ssr-blog/src/api/posts/: mod.rs  route.rs
crates/virust-cli/templates/ssr-blog/src/api/posts/[slug]/: mod.rs  route.rs
crates/virust-cli/templates/ssr-blog/web/: app.tsx  types.ts
crates/virust-cli/templates/ssr-blog/web/components/: BlogCard.tsx
crates/virust-cli/templates/ssr-dashboard/: Cargo.toml.template  README.md.template  package.json  tailwind.config.ts
crates/virust-cli/templates/ssr-dashboard/src/: main.rs
crates/virust-cli/templates/ssr-dashboard/src/api/: mod.rs
crates/virust-cli/templates/ssr-dashboard/src/api/stats/: route.rs
crates/virust-cli/templates/ssr-dashboard/src/api/users/: route.rs
crates/virust-cli/templates/ssr-dashboard/web/: app.tsx  types.ts
crates/virust-cli/templates/ssr-dashboard/web/components/: RevenueChart.tsx  StatsCard.tsx  UserTable.tsx
crates/virust-cli/templates/todo/api/todos/: route.rs
crates/virust-cli/templates/todo/src/api/[id]/: route.rs
crates/virust-cli/templates/todo/web/: index.html  main.js  styles.css
crates/virust-macros/: Cargo.toml
crates/virust-macros/src/: cache.rs  lib.rs  types.rs
crates/virust-macros/tests/: body_attr_tests.rs  body_attribute.rs  cache_macro_test.rs  different_return_test.rs  function_syntax_tests.rs  multi_path_test.rs  path_and_body.rs  path_attr_tests.rs  path_attribute.rs  registry_tests.rs  render_test.rs  ssg_macro_test.rs  test_inventory_collection.rs  test_various_returns.rs  ts_tests.rs  ws_tests.rs
crates/virust-protocol/: Cargo.toml
crates/virust-protocol/src/: http.rs  lib.rs  persistence.rs  rpc.rs
crates/virust-protocol/tests/: http_tests.rs  rpc_tests.rs
crates/virust-runtime/: Cargo.toml
crates/virust-runtime/src/: cache.rs  client.rs  discovery.rs  extraction.rs  hmr.rs  http.rs  inventory_registry.rs  isr.rs  lib.rs  middleware.rs  persistence.rs  registry.rs  render.rs  struct_parser.rs  typescript.rs  watch.rs  watcher.rs  websocket.rs
crates/virust-runtime/tests/: body_parameter_integration.rs  cache_test.rs  discovery_test.rs  discovery_tests.rs  http_tests.rs  hydration_test.rs  isr_metadata_test.rs  isr_serving_test.rs  path_parameter_integration.rs  registry_tests.rs  route_discovery_e2e.rs  ssr_integration_test.rs  struct_parser_test.rs  typescript_integration.rs  typescript_integration_test.rs  ws_tests.rs
crates/virust-typescript/: Cargo.toml
crates/virust-typescript/src/: lib.rs
docs/: BENCHMARK_TUTORIAL.md  INSTALLATION.md  VIRUST_VS_NEXTJS.md  VIRUST_VS_NEXTJS_REAL_BENCHMARK.md  VIRUST_VS_NEXTJS_REAL_BENCHMARK_FIXED.md  ssg-guide.md  ssr-guide.md  v0.1-checklist.md
docs/plans/: 2026-03-05-virust-v0.1-design.md  2026-03-05-virust-v0.1-implementation.md  2026-03-05-virust-v0.2-design.md  2026-03-05-virust-v0.2-implementation.md  2026-03-06-virust-v0.3-design.md  2026-03-06-virust-v0.3-implementation.md  2026-03-06-virust-v0.3-release.md  2026-03-06-virust-v0.4-design.md  2026-03-06-virust-v0.4-implementation.md  2026-03-06-virust-v0.4-release.md  2026-03-06-virust-v0.5-design.md  2026-03-06-virust-v0.5-implementation.md  2026-03-06-virust-v0.5-release.md
examples/ssr-blog/: Cargo.toml  README.md
examples/ssr-blog/src/: main.rs
examples/ssr-blog/src/api/: mod.rs  route.rs
examples/ssr-blog/web/: index.html  main.js
examples/ssr-blog/web/components/: BlogList.jsx  BlogPost.jsx  LikeButton.jsx
examples/ssr-dashboard/: Cargo.toml  README.md
examples/ssr-dashboard/src/: main.rs
examples/ssr-dashboard/src/api/: mod.rs  route.rs
examples/ssr-dashboard/web/: index.html  main.js
examples/ssr-dashboard/web/components/: ActivityFeed.jsx  Chart.jsx  Dashboard.jsx  RefreshButton.jsx  StatCard.jsx
test-fullstack/: Cargo.toml  package.json
test-fullstack/.virust/: client.js
tests/integration/: Cargo.toml
tests/integration/src/: main.rs
(+3 files in other folders)
