[package]
name = "test-fullstack"
version = "0.1.0"
edition = "2021"

[dependencies]
virust-runtime = { git = "https://github.com/hangsiahong/virust.git", branch = "master" }
virust-macros = { git = "https://github.com/hangsiahong/virust.git", branch = "master" }
virust-protocol = { git = "https://github.com/hangsiahong/virust.git", branch = "master" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
inventory = "0.3"
axum = "0.7"
anyhow = "1"
lazy_static = "1.4"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
