[package]
name = "virust-cli"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "virust"
path = "src/main.rs"

[dependencies]
virust-runtime = { path = "../virust-runtime" }
virust-bun = { path = "../virust-bun" }
virust-build = { path = "../virust-build" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
notify = "6"
axum = "0.7"
serde_json = "1"
num_cpus = "1.16"
