[package]
name = "virust-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
inventory = "0.3"
virust-typescript = { path = "../virust-typescript" }
virust-runtime = { path = "../virust-runtime" }

[dev-dependencies]
trybuild = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
virust-runtime = { path = "../virust-runtime" }
virust-bun = { path = "../virust-bun" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
