[package]
name = "virust-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
