[package]
name = "virust-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
virust-protocol = { path = "../virust-protocol" }
virust-bun = { path = "../virust-bun" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = "0.21"
futures-util = "0.3"
notify = "6.0"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"
anyhow = "1"
inventory = "0.3"
once_cell = "1.19"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
lazy_static = "1.4"
html-escape = "0.2"

[dev-dependencies]
tempfile = "3"
hyper = { version = "0.14", features = ["full"] }
