[package]
name = "virust-integration-test"
version = "0.1.0"
edition = "2021"

[dependencies]
virust-runtime = { path = "../../crates/virust-runtime" }
virust-macros = { path = "../../crates/virust-macros" }
virust-protocol = { path = "../../crates/virust-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }